header alignment fixed, black menu box out of position

--- a/rchive/menu.css
+++ b/rchive/menu.css
@@ -1,3 +1,4 @@
+
 * {
   margin: 0;
   -webkit-box-sizing: border-box;
@@ -23,7 +24,7 @@ header nav {
   width: 100%;
   min-height: 55px;
   padding: 1rem 1rem;
-  position:fixed;
+  /*position:fixed;*/
   top: 0;
   background-color:#fff0ed;
   
@@ -36,7 +37,9 @@ header .nav-link {
   
 }
 
-
+#title-box{  width: 285px; height: 185px; background-position: center; margin-left: 39%; margin-right: 30%;  }
+#title-box h1{background-color:#464646; color: #fff; text-align:center;
+  margin-left: 1rem; margin-right: 1rem; padding-bottom: 30%;}
 
 #blue-text{color: #5bacc3;}
 
@@ -44,23 +47,24 @@ header .nav-link {
  
   z-index: -1;
   width: 100vw;
-  height: 53.3vw;
-  background-color: gainsboro;
+  height: 50vw;
   overflow: hidden;
+
 }
-
-#title-box{  width: 285px; height: 185px; background-position: center; margin-left: 34%; margin-right: 34%; }
-#title-box h1{background-color:#464646; color: #fff; text-align:center;
- padding-top: 30%; }
-
 
 #menu-head-list{
 
   background-size: cover;
     background-color: #393939;
     text-align: center;
+    overflow: hidden;
 
+  padding-top: 1.25rem; 
+  padding-bottom: 1.25rem;
+  
 }
+
+
 
 
 #Hot-Drinks{background-color: #FFF0ED; padding: 1rem; }
@@ -70,7 +74,7 @@ header .nav-link {
 
 
 
-#menu-head-list{padding-top: 1.25rem; padding-bottom: 1.25rem;}
+
 h1{ font-family: Helvetica ; font-weight:100; font-size: 60px;}
 h3{ font-family: Helvetica ; font-weight:100; font-size: 33px;}
 h2{ font-family: Helvetica ; font-weight:100; font-size: 60px; margin-bottom: 0.75rem;}
@@ -87,9 +91,6 @@ nav ul{ font-family: Helvetica ; font-size: 21px;list-style-type: none;}
 /*nav li{ list-style-type: none; text-decoration: none;  }*/
 a{text-decoration: none; color: #393939}
 
-#title-box{  width: 285px; height: 185px; background-position: top left; }
-#title-box h1{background-color:#464646; color: #fff; text-align:center;
-padding-bottom: 60px; margin-top: 0px;}
 
 menu-text{ font-family: Helvetica ;  font-size: 18px; color: #f7f7f7; margin:0.5em; }
 small-text{font-family: Helvetica ;  font-size: 21px; color: #464646;}
